add qmd analysis; finish app1

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,15 @@ Description: More about what it does (maybe more than one line).
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports: 
+  glue,
+  gdata,
+  hms
 Depends:
   shiny,
   bslib,
   dplyr,
   echarts4r,
   bsicons,
-  ggplot2
+  ggplot2,
+  lubridate
